--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@ content="width=device-width, initial-scale=1.0" />
      <!-- #endregion hero -->
 
  <!-- #region benefits -->
-    <section class="benefits hidden">
+    <section class="benefits">
         <div class="container">
             <h2 class="visually-hidden">Our Values</h2>
             <ul class="strategy-list-section">
@@ -171,7 +171,7 @@ content="width=device-width, initial-scale=1.0" />
                         </svg>
                     </div>
                     <h3 class="strategy-list">Strategy</h3>
-                    <p class="strategy-iteam">
+                    <p class="strategy-item">
                         Our goal is to identify the business problem to walk away with the perfect and creative solution.
                     </p>
                 </li>
@@ -183,7 +183,7 @@ content="width=device-width, initial-scale=1.0" />
                         </svg>
                     </div>
                     <h3 class="strategy-list">Punctuality</h3>
-                    <p class="strategy-iteam">
+                    <p class="strategy-item">
                         Bring the key message to the brand's audience for the best price within the shortest possible time.
                     </p>
                 </li>
@@ -195,7 +195,7 @@ content="width=device-width, initial-scale=1.0" />
                         </svg>
                     </div>
                     <h3 class="strategy-list">Diligence</h3>
-                    <p class="strategy-iteam">
+                    <p class="strategy-item">
                         Research and confirm brands with the strongest digital growth opportunities and minimize risk.
                     </p>
                 </li>
@@ -206,8 +206,8 @@ content="width=device-width, initial-scale=1.0" />
                             <use href="./images/icons.svg#icon-diagram-1"></use>
                         </svg>
                     </div>
-                    <h3 class="strategy-list">Technology</h3>
-                    <p class="strategy-iteam">
+                    <h3 class="strategy-list">Technologies</h3>
+                    <p class="strategy-item">
                         Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.
                     </p>
                 </li>
