--- a/index.html
+++ b/index.html
@@ -219,13 +219,14 @@ content="width=device-width, initial-scale=1.0" />
 <!-- endregion benefits -->
 
 <!--#region team-->
-<section class="title-isteam-section hidden">
-    <div class="container">
+<section class="title-isteam-section ">
+    <div class="container .container-team ">
         <h2 class="heading-workers">Our Team</h2>
         <ul class="title-list">
 
-            <li class="title-line">
-                <img src="./images/boys.jpg" alt="Mark Guerrero" width="264" height="260" />
+            <li class="title-line ">
+                <img src="./images/team/boys.jpg" srcset="./images/team/boys.jpg 1x, ./images/team/boys@2x.jpg 2x" width="264" height="260"
+                    alt="Mark Guerrero" >
                 <div class="title-workers">
                     <h3 class="title">Mark Guerrero</h3>
                     <p class="title-iteam">Product Designer</p>
@@ -233,28 +234,28 @@ content="width=device-width, initial-scale=1.0" />
                         <li class="social-networks">
                             <a class="networks-link" href="#">
                                 <svg class="logo-link" width="16" height="16">
-                                    <use href="./images/icons.svg#icon-instagram-2"></use>
+                                    <use href="./images/icon/icons.svg#icon-instagram-2"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="social-networks">
                             <a class="networks-link" href="#">
                                 <svg class="logo-link" width="16" height="16">
-                                    <use href="./images/icons.svg#icon-twitter-1"></use>
+                                    <use href="./images/icon/icons.svg#icon-twitter-1"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="social-networks">
                             <a class="networks-link" href="#">
                                 <svg class="logo-link" width="16" height="16">
-                                    <use href="./images/icons.svg#icon-facebook-1"></use>
+                                    <use href="./images/icon/icons.svg#icon-facebook-1"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="social-networks">
                             <a class="networks-link" href="#">
                                 <svg class="logo-link" width="16" height="16">
-                                    <use href="./images/icons.svg#icon-linkedin-1"></use>
+                                    <use href="./images/icon/icons.svg#icon-linkedin-1"></use>
                                 </svg>
                             </a>
                         </li>
@@ -263,7 +264,8 @@ content="width=device-width, initial-scale=1.0" />
             </li>
 
             <li class="title-line">
-                <img src="./images/boys2.jpg" alt="Tom Ford" width="264" height="260" />
+                <img src="./images/team/boys2.jpg" srcset="./images/team/boys2.jpg 1x, ./images/team/boys2@2x.jpg 2x" width="264" height="260"
+                    alt="Tom Ford">
                 <div class="title-workers">
                     <h3 class="title">Tom Ford</h3>
                     <p class="title-iteam">Frontend Developer</p>
@@ -271,28 +273,28 @@ content="width=device-width, initial-scale=1.0" />
                         <li class="social-networks">
                             <a class="networks-link" href="#">
                                 <svg class="logo-link" width="16" height="16">
-                                    <use href="./images/icons.svg#icon-instagram-2"></use>
+                                    <use href="./images/icon/icons.svg#icon-instagram-2"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="social-networks">
                             <a class="networks-link" href="#">
                                 <svg class="logo-link" width="16" height="16">
-                                    <use href="./images/icons.svg#icon-twitter-1"></use>
+                                    <use href="./images/icon/icons.svg#icon-twitter-1"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="social-networks">
                             <a class="networks-link" href="#">
                                 <svg class="logo-link" width="16" height="16">
-                                    <use href="./images/icons.svg#icon-facebook-1"></use>
+                                    <use href="./images/icon/icons.svg#icon-facebook-1"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="social-networks">
                             <a class="networks-link" href="#">
                                 <svg class="logo-link" width="16" height="16">
-                                    <use href="./images/icons.svg#icon-linkedin-1"></use>
+                                    <use href="./images/icon/icons.svg#icon-linkedin-1"></use>
                                 </svg>
                             </a>
                         </li>
@@ -301,7 +303,9 @@ content="width=device-width, initial-scale=1.0" />
             </li>
 
             <li class="title-line">
-                <img src="./images/girl.jpg" alt="Camila Garcia" width="264" height="260" />
+                <img src="./images/team/girl.jpg" srcset="./images/team/girl.jpg 1x, ./images/team/girl@2x.jpg 2x" width="264" height="260"
+                    alt="Camila Garcia">
+
                 <div class="title-workers">
                     <h3 class="title">Camila Garcia</h3>
                     <p class="title-iteam">Marketing</p>
@@ -309,28 +313,28 @@ content="width=device-width, initial-scale=1.0" />
                         <li class="social-networks">
                             <a class="networks-link" href="#">
                                 <svg class="logo-link" width="16" height="16">
-                                    <use href="./images/icons.svg#icon-instagram-2"></use>
+                                    <use href="./images/icon/icons.svg#icon-instagram-2"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="social-networks">
                             <a class="networks-link" href="#">
                                 <svg class="logo-link" width="16" height="16">
-                                    <use href="./images/icons.svg#icon-twitter-1"></use>
+                                    <use href="./images/icon/icons.svg#icon-twitter-1"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="social-networks">
                             <a class="networks-link" href="#">
                                 <svg class="logo-link" width="16" height="16">
-                                    <use href="./images/icons.svg#icon-facebook-1"></use>
+                                    <use href="./images/icon/icons.svg#icon-facebook-1"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="social-networks">
                             <a class="networks-link" href="#">
                                 <svg class="logo-link" width="16" height="16">
-                                    <use href="./images/icons.svg#icon-linkedin-1"></use>
+                                    <use href="./images/icon/icons.svg#icon-linkedin-1"></use>
                                 </svg>
                             </a>
                         </li>
@@ -339,7 +343,8 @@ content="width=device-width, initial-scale=1.0" />
             </li>
 
             <li class="title-line">
-                <img src="./images/boys3.jpg" alt="Daniel Wilson" width="264" height="260" />
+                <img src="./images/team/boys3.jpg" srcset="./images/team/boys3.jpg 1x, ./images/team/boys3@2x.jpg 2x" width="264" height="260"
+                    alt="Camila Garcia">
                 <div class="title-workers">
                     <h3 class="title">Daniel Wilson</h3>
                     <p class="title-iteam">UI Designer</p>
@@ -347,28 +352,28 @@ content="width=device-width, initial-scale=1.0" />
                         <li class="social-networks">
                             <a class="networks-link" href="#">
                                 <svg class="logo-link" width="16" height="16">
-                                    <use href="./images/icons.svg#icon-instagram-2"></use>
+                                    <use href="./images/icon/icons.svg#icon-instagram-2"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="social-networks">
                             <a class="networks-link" href="#">
                                 <svg class="logo-link" width="16" height="16">
-                                    <use href="./images/icons.svg#icon-twitter-1"></use>
+                                    <use href="./images/icon/icons.svg#icon-twitter-1"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="social-networks">
                             <a class="networks-link" href="#">
                                 <svg class="logo-link" width="16" height="16">
-                                    <use href="./images/icons.svg#icon-facebook-1"></use>
+                                    <use href="./images/icon/icons.svg#icon-facebook-1"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="social-networks">
                             <a class="networks-link" href="#">
                                 <svg class="logo-link" width="16" height="16">
-                                    <use href="./images/icons.svg#icon-linkedin-1"></use>
+                                    <use href="./images/icon/icons.svg#icon-linkedin-1"></use>
                                 </svg>
                             </a>
                         </li>
@@ -382,7 +387,7 @@ content="width=device-width, initial-scale=1.0" />
 <!-- #endregion team -->
 
 <!-- #region portfolio -->
-<section class="portfolio-section hidden">
+<section class="portfolio-section">
 
     <div class="container">
 
@@ -393,11 +398,17 @@ content="width=device-width, initial-scale=1.0" />
             <li class="portfolio-list">
 
                 <div class="container-images">
+                    <picture>
+                        <source media="(min-width: 1200px)" srcset="../images/nazar.png 1x, ../images/how-its-made.jpg 2x">
+                        <source media="(min-width: 768px)" srcset="../images/olena.png 1x, ../images/how-its-made.jpg 2x">
+                        <source media="(max-width: 767px)" srcset="../images/viktoria.png 1x, ../images/how-its-made.jpg 2x">
+                        <img src="../images/semi-sweet.png" alt="semi-sweet">
+                    </picture>
                     <img src="./images/model.jpg" alt="Banking App"
-                                 width="360"
-                                 height="300"
-                                 />
-                                 <p class="paragraph">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App ·
+                     width="360"
+                    height="300">
+                    </picture>
+                    <p class="paragraph">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App ·
                                 Cloud Storage App</p>
                 </div>
 
