--- a/index.html
+++ b/index.html
@@ -63,11 +63,10 @@ content="width=device-width, initial-scale=1.0" />
             </ul>
             </address>
             <button class="burger-btn" type="button" data-menu-open>
-                <a class="" href="#">
                     <svg class="burger-icon" width="24" height="24">
                         <use href="./images/icon/icons.svg#burger-icon"></use>
                     </svg>
-                </a>
+            </button>
         </div>
 <!-- #region mobile menu -->
         <div class="mobile-menu" data-menu>
@@ -577,21 +576,21 @@ content="width=device-width, initial-scale=1.0" />
 <!-- #endregion footer -->
 
 <!-- #region popup -->
-<div class="backdrop hidden">
+<div class="backdrop is-open" data-popup>
     <div class="popup-review">
-        <button class="close-popup" type="button">
+        <button class="close-popup" type="button" data-popup-close>
             <svg class="close-popup-icon" width="8" height="8">
-                <use href="./images/icons.svg#icon-close"></use>
+                <use href="./images/icon/icons.svg#icon-close"></use>
             </svg>
         </button>
         <p class="popup-title">Leave your contacts and we will call you back</p>
         <form>
-    <div class="form-field-wrapper">
+    <div class="form-field-wrapper"> 
         <label class="label-field" for="user-name">Name</label>
         <div class="field-wrapper">
             <input class="text-field" type="text" id="user-name" name="user-name">
             <svg class="field-icon" width="18" height="24">
-                <use href="./images/icons.svg#icon-person"></use>
+                <use href="./images/icon/icons.svg#icon-person"></use>
             </svg>
         </div>
     </div>
@@ -600,7 +599,7 @@ content="width=device-width, initial-scale=1.0" />
         <div class="field-wrapper">
             <input class="text-field" type="text" id="user-tel" name="user-name">
             <svg class="field-icon" width="18" height="24">
-                <use href="./images/icons.svg#icon-phone"></use>
+                <use href="./images/icon/icons.svg#icon-phone"></use>
             </svg>
         </div>
     </div>
@@ -610,7 +609,7 @@ content="width=device-width, initial-scale=1.0" />
         <div class="field-wrapper">
             <input class="text-field" type="text" id="user-email" name="user-name">
             <svg class="field-icon" width="18" height="24">
-                <use href="./images/icons.svg#icon-email"></use>
+                <use href="./images/icon/icons.svg#icon-email"></use>
             </svg>
         </div>
     </div>
@@ -624,20 +623,23 @@ content="width=device-width, initial-scale=1.0" />
     <label for="user-privacy" class="policy-label">
         <span class="custom-checkbox">
             <svg class="checkbox-icon" width="10" height="8">
-                <use href="./images/icons.svg#icon-checkbox"></use>
+                <use href="./images/icon/icons.svg#icon-checkbox"></use>
             </svg>
         </span>
+        <span class="checkbox-text">
         I accept the terms and conditions of the
         <a href="#" class="policy-link">
             Privacy
             Policy
         </a>
+        </span>
     </label>
     </div>
     <button class="button-primary" type="submit">Send</button>
 </form>
     </div>
 </div>
+<script src="./js/modal.js" defer></script>
 <!-- #endregion popup -->
 </body>
 </html>
